--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -70,9 +70,8 @@
 
       </div>
       <div class="card-action">
-        <a href="" class="product-details">
-          View Full Details</a>
-        <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">See all {{ technology.technology_name}} comments</a>
+        
+        <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">See all the comments about{{ technology.technology_name}}</a>
         <br>
         {% if session.user|lower == technology.posted_by|lower %}
         
