--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -71,7 +71,7 @@
       </div>
       <div class="card-action">
         
-        <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">See all the comments about{{ technology.technology_name}}</a>
+        <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">See all the comments about {{ technology.technology_name}}s</a>
         <br>
         {% if session.user|lower == technology.posted_by|lower %}
         
