--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,16 +3,95 @@
 
 <h1 class="center-align">{{ page_title }}</h1>
 
+<div class="row">
+    <div class="col s12 m8 offset-m2">
+        <div class="card-panel">
+            <h3 class="center-align">
+                {{ username|capitalize }}'s Profile
+            </h3>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12 m6">
+        <button id="showTechnologies" class="btn-large waves-effect waves-light orange darken-3">See and edit all the
+            technologies you have added</button>
+    </div>
+    <div class="col s12 m6">
+        <button id="showComments" class="btn-large waves-effect waves-light orange darken-3">See and edit all the
+            comments you have made</button>
+    </div>
+</div>
+
+<div class="row">
+    {% if technologies|length > 0 %}
+    <div class="col s12 text-center">
+        <h3 class="heading">You added these technologies</h3>
+    </div>
+    {% for technology in technologies %}
+    <div class="col s12 m7">
+        <div class="card horizontal medium hoverable">
+            <div class="card-image">
+                <img src="{{ technology.technology_image }}" alt="">
+            </div>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <ul>
+                        <li><strong>Category: {{ technology.category_name }}</strong></li>
+                        <li>Name: {{ technology.technology_name }}</li>
+                        <li>Added by: {{ technology.added_by }}</li>
+                        <li>Date posted: {{ technology.post_date }}</li>
+                    </ul>
+
+                </div>
+                <div class="card-action">
 
 
-    <div class="row">
-        <div class="col s12 m8 offset-m2">
-            <div class="card-panel">
-                <h3 class="center-align">
-                    {{ username|capitalize }}'s Profile
-                </h3>
+                    <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
+                        class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
+                            class="material-icons right">edit</i>Edit this technology</a>
+                    <a class="waves-effect waves-light  btn-small orange darken-3 align-right modal-trigger"
+                        href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete this
+                        technology</a>
+
+                </div>
+
             </div>
         </div>
     </div>
+    <!--  modal -->
+    <div id="modal{{ technology._id }}" class="modal">
+        <div class="modal-content">
+            <h4>Are you sure you want to delete this item?</h4>
+            <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
+        </div>
+        <div class="modal-footer center-align">
+            <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
+                class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am certain I
+                want to
+                delete this</a>
+
+            <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
+                class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">No, return to
+                safety</a>
+
+        </div>
+    </div>
+    {% endfor %}
+     
+    {% else %}
+
+    <div class="row">
+        <div class="col s12 text-center">
+            <p>You have not added any technologies yet <a href="{{ url_for('add_technology') }}"
+                class="orange-text text-darken-4">Add your first technology now</a></p>
+
+        </div>
+    </div>
+    {% endif %}
+
+
+</div>
 
 {% endblock %}
