Add content and style to profile.html

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -64,8 +64,8 @@
           <li>Description: {{ technology.technology_description }}</li>
           <li>Best bits: {{ technology.best_bits }}</li>
           <li>Worst bits: {{ technology.worst_bits }}</li>
-          <li>Added by: {{ technology.posted_by }}</li>
-          <li>Date posted: {{ technology.post_date }}</li>
+          <li>Added by: {{ technology.added_by }}</li>
+          <li>Date posted: {{ technology.added_on }}</li>
         </ul>
 
       </div>
