--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,23 +14,10 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6">
-        <button id="showTechnologies" class="btn-large waves-effect waves-light orange darken-3">See and edit all the
-            technologies you have added</button>
-    </div>
-    <div class="col s12 m6">
-        <button id="showComments" class="btn-large waves-effect waves-light orange darken-3">See and edit all the
-            comments you have made</button>
-    </div>
-</div>
-
-<div class="row">
-    {% if technologies|length > 0 %}
-    <div class="col s12 text-center">
-        <h3 class="heading">You added these technologies</h3>
-    </div>
-    {% for technology in technologies %}
-    <div class="col s12 m7">
+    <div class="col s6">
+        {% if technologies|length > 0 %}
+        <h4 class="heading center-align">Technologies you've added</h4>
+        {% for technology in technologies %}
         <div class="card horizontal medium hoverable">
             <div class="card-image">
                 <img src="{{ technology.technology_image }}" alt="">
@@ -40,58 +27,83 @@
                     <ul>
                         <li><strong>Category: {{ technology.category_name }}</strong></li>
                         <li>Name: {{ technology.technology_name }}</li>
-                        <li>Added by: {{ technology.added_by }}</li>
+                        <li>Added by: {{ technology.posted_by }}</li>
                         <li>Date posted: {{ technology.post_date }}</li>
                     </ul>
-
                 </div>
                 <div class="card-action">
 
-
+                    <a href="{{ url_for('individual_technology', technology_id=technology._id) }}">See all
+                        the
+                        comments
+                        about {{ technology.technology_name}}s</a>
+                    <br>
                     <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
                         class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
                             class="material-icons right">edit</i>Edit this technology</a>
                     <a class="waves-effect waves-light  btn-small orange darken-3 align-right modal-trigger"
-                        href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete this
+                        href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete
+                        this
                         technology</a>
-
                 </div>
-
             </div>
         </div>
-    </div>
-    <!--  modal -->
-    <div id="modal{{ technology._id }}" class="modal">
-        <div class="modal-content">
-            <h4>Are you sure you want to delete this item?</h4>
-            <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
+        <!--  modal -->
+        <div id="modal{{ technology._id }}" class="modal">
+            <div class="modal-content">
+                <h4>Are you sure you want to delete this item?</h4>
+                <p>The entire entry and all its comments will be deleted and you will not be able to retrieve
+                    them
+                </p>
+            </div>
+            <div class="modal-footer center-align">
+                <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
+                    class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am
+                    certain
+                    I
+                    want to
+                    delete this</a>
+                <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
+                    class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">No,
+                    return to
+                    safety</a>
+            </div>
         </div>
-        <div class="modal-footer center-align">
-            <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-                class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am certain I
-                want to
-                delete this</a>
 
-            <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-                class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">No, return to
-                safety</a>
+        {% endfor %}
+        {% else %}
+        <h4>You haven't added any technologies yet</h4>
+        <a>Add one now</a>
+        {% endif %}
+    </div>
+
+    <div class="col s6">
+        {% if comments|length > 0 %}
+        <h4 class="heading center-align">Comments you've added</h4>
+        {% for comment in comments %}
+        <div class="card horizontal medium hoverable">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="card-stacked">
+            <div class="card-content">
+                <ul>
+                    <li><strong>Category: {{ comments.technology_name }}</strong></li>
+                    <li>Name: {{ comments.technology_comment }}</li>
+                    <li>Added by: {{ comments.created_on }}</li>
+                    <li>Date posted: {{ comments.author }}</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card-action">
 
         </div>
+
+        {% endfor %}
     </div>
-    {% endfor %}
-     
     {% else %}
-
-    <div class="row">
-        <div class="col s12 text-center">
-            <p>You have not added any technologies yet <a href="{{ url_for('add_technology') }}"
-                class="orange-text text-darken-4">Add your first technology now</a></p>
-
-        </div>
-    </div>
+    <h4>You haven't added any comments yet</h4>
+    <a>Pick a technology to comment on</a>
     {% endif %}
-
-
-</div>
-
-{% endblock %}
+    {% endblock %}
