--- a/templates/edit_technology.html
+++ b/templates/edit_technology.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="center-align">Edit the entry for "{{ technology.technology_name}}"</h1>
+<h1 class="center-align">Edit your entry of {{ technology.technology_name}}</h1>
 
 <!-- Code for form from Materialize.com -->
 <div class="row">
