--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -11,7 +11,7 @@
             <!-- Input for adding a technology's name  -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">important_devices</i>
+                    <i class="material-icons prefix purple-text text-darken-3">important_devices</i>
                     <input id="technology_name" name="technology_name" minlength="5" maxlength="75" type="text"
                         class="validate" placeholder="Name" required>
                     <label for="technology_name">Technology's name</label>
@@ -21,7 +21,7 @@
             <!-- Dropdown for picking a technology's category -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">list</i>
+                    <i class="material-icons prefix purple-text text-darken-3">list</i>
                     <select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled selected>Choose a category for your technology</option>
                         {% for category in categories %}
@@ -35,7 +35,7 @@
             <!-- Input for adding a technology image -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">camera_alt</i>
+                    <i class="material-icons prefix purple-text text-darken-3">camera_alt</i>
                     <input id="technology_image" name="technology_image" type="text" class="validate"
                         placeholder="Important! Must be a url" required>
                     <label for="technology_image">Technology's Image</label>
@@ -45,7 +45,7 @@
             <!-- Input for adding a technology description -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">description</i>
+                    <i class="material-icons prefix purple-text text-darken-3">description</i>
                     <textarea id="technology_description" name="technology_description" minlength="5" maxlength="200"
                         placeholder="Brief desciption, less than 300 characters!" class="materialize-textarea validate"
                         required></textarea>
@@ -56,7 +56,7 @@
             <!-- Input for adding a best bits about the technology -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">thumb_up</i>
+                    <i class="material-icons prefix purple-text text-darken-3">thumb_up</i>
                     <textarea id="best_bits" name="best_bits" minlength="5" maxlength="150"
                         placeholder="What do you love most about this technology?" class="materialize-textarea validate"
                         required></textarea>
@@ -67,7 +67,7 @@
             <!-- Input for adding worst bits about the technology -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix orange-text text-darken-3">thumb_down</i>
+                    <i class="material-icons prefix purple-text text-darken-3">thumb_down</i>
                     <textarea id="worst_bits" name="worst_bits" minlength="5" maxlength="150"
                         placeholder="What do you NOT love about this technology?" class="materialize-textarea validate"
                         required></textarea>
@@ -78,11 +78,11 @@
             <!-- Submit button for adding a technology -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                    <button type="submit" class="btn-large waves-effect waves-light purple darken-3">
                         Add this technology now! <i class="material-icons right">add_circle_outline</i>
                     </button>
                     <!-- Button to cancel all changes and return to technologies -->
-                    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light orange darken-3">
+                    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple darken-3">
                         Cancel <i class="material-icons right">close</i></a>
                 </div>
             </div>
