--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="row background-img">
+  <div class="container">
+    <h1 class="center-align page-topper">Technostalgia</h1>
+    <h4 class="center-align">A place to reminisce about technologies that have been loved and lost, but not
+      forgotten.</h4>
 
-<h1 class="center-align page-topper">Technostalgia</h1>
-<h3 class="center-align">A place to come and reminisce about technologies that have been loved and lost, but not
-  forgotten.</h3>
 
-
-<!-- Code for carousel from  Materialise.com -->
-<div class="carousel">
-  {% for technology in technologies %}
-  <a class="carousel-item"><img src="{{ technology.technology_image }}"></a>
-  {% endfor %}
+    <!-- Code for carousel from  Materialise.com -->
+    <div class="carousel">
+      {% for technology in technologies %}
+      <a class="carousel-item"><img src="{{ technology.technology_image }}"></a>
+      {% endfor %}
+    </div>
+  </div>
 </div>
-
-
 {% endblock  %}
